<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NFCActivity">

    <Button
        android:id="@+id/button_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/nfc_loggedIn_low_security"
        app:layout_constraintBottom_toTopOf="@+id/button_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_loggedIn_medium_security"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/nfc_loggedIn_max_security"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>