<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NFCActivities">

    <TextView
        android:id="@+id/nfc_textView_password"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/nfc_text_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfc_textView_username" />

    <TextView
        android:id="@+id/nfc_textView_username"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="200dp"
        android:text="@string/nfc_text_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nfc_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/nfc_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfc_input_password" />

    <EditText
        android:id="@+id/nfc_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfc_input_name" />

    <EditText
        android:id="@+id/nfc_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:layout_marginTop="84dp"
        android:text="@string/nfc_text_scan_false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfc_button_login" />
</androidx.constraintlayout.widget.ConstraintLayout>